<?xml version="1.0" encoding="utf-8"?>
    <android.support.v4.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_title"
                android:layout_width="match_parent"
                android:layout_height="@dimen/title_backgroundHeight"
                android:background="@color/titleBackground"
                android:gravity="center"
                android:textColor="@color/textColor"
                android:textSize="@dimen/title_textsize"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/layout_margin"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/iv_movie_thumbnail"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/image_thumbnailHeight"
                    android:layout_weight="1"
                    android:contentDescription="@string/thumbnail_image" />


                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/tv_releaseDate"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="@dimen/releasedate_textsize" />

                    <TextView
                        android:id="@+id/tv_voteAverage"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/layout_margin"
                        android:textSize="@dimen/voteAverage_textsize" />

                    <Button
                        android:id="@+id/bt_markAsFavorite"
                        android:layout_width="@dimen/markAsFavorite_btn_width"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/layout_margin"
                        android:background="@color/buttonBackground"
                        android:text="@string/mark_as_favorite"
                        android:textColor="@color/buttonTextColor" />

                </LinearLayout>

            </LinearLayout>

            <TextView
                android:id="@+id/tv_review"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/layout_margin"
                android:textSize="@dimen/review_textsize" />

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/divider_line_height"
                android:background="@color/viewLineColor"
                android:layout_marginLeft="@dimen/layout_margin_left"
                android:layout_marginRight="16dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/trailers"
                style="@style/ActivitySubTitles"/>

            <android.support.v7.widget.RecyclerView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/rv_trailers"
                tools:listitem="@layout/trailer_list_item">
            </android.support.v7.widget.RecyclerView>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/tv_share_trailer"
                android:layout_marginLeft="@dimen/layout_margin_left"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="@dimen/layout_margin_bottom"
                android:text="@string/share_trailer"
                android:textColor="@color/colorAccent"
                android:textSize="@dimen/share_trailer_textsize"
                android:textStyle="bold"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="@color/viewLineColor"
                android:layout_marginLeft="@dimen/layout_margin_left"
                android:layout_marginRight="@dimen/layout_margin_right"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/reviews"
                style="@style/ActivitySubTitles"/>

            <android.support.v7.widget.RecyclerView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/rv_reviews"
                tools:listitem="@layout/review_list_item">
            </android.support.v7.widget.RecyclerView>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/no_reviews"
                android:layout_marginLeft="@dimen/layout_margin_left"
                android:layout_marginTop="@dimen/layout_margin_top"
                android:layout_marginRight="@dimen/layout_margin_right"
                android:layout_marginBottom="@dimen/layout_margin_bottom"
                android:visibility="gone"
                android:id="@+id/tv_no_reviews"/>

        </LinearLayout>

    </android.support.v4.widget.NestedScrollView>